Fix bloc with logos on mobile in index.html

--- a/assets/css/default_style.css
+++ b/assets/css/default_style.css
@@ -28,12 +28,13 @@ body{
 }
 
 .bloc1 {
-    background-color:rgba(156, 156, 156,0.7);
+    background-color: rgba(156, 156, 156,0.7);
     border-radius: 2em;
     margin-top: 30px;
 }
 
 .bloc2 {
+    margin-top: 3em;
     background-color: rgba(255, 255, 255, 0.7);
     border-radius: 2em;
 }
